[package]
name = "semfilter"
version = "0.1.0"
authors = ["Mikael Forslund <756148+mikaelforslund@users.noreply.github.com>", "Erich Liebmann <7557807+qpanda@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33", features = ["yaml"]}
regex = "1"
lazy_static = "1.4.0"
pest = "2.1.3"
pest_derive = "2.1.0"
chrono = "0.4"
log = "0.4"
env_logger = "0.8.3"
semver = "0.11.0"
yaml-rust = "0.4.1"
